--- a/index.html
+++ b/index.html
@@ -17,44 +17,36 @@
   <nav>
     <ul class="nav-flex-row">
       <li class="nav-item">
-        <a href="#about">About</a>
+        <a href="#about">Dry Goods</a>
       </li>
       <li class="nav-item">
-        <a href="#reservation">Reservation</a>
+        <a href="#reservation">Paper Products</a>
       </li>
       <li class="nav-item">
-        <a href="#menu">Menu</a>
+        <a href="#menu">Aromatic Spices</a>
       </li>
       <li class="nav-item">
-        <a href="#shop">Shop</a>
+        <a href="#shop">Fresh Produce</a>
       </li>
     </ul>
   </nav>
 
   <section class="section-intro">
     <header>
-      <h1>Fooddddie</h1>
+      <h1>WEBSITE COMING SOON</h1>
     </header>
     <div class="link-to-book-wrapper">
-      <a class="link-to-book" href="#reservations">Book a table</a>
+      <a class="link-to-book" href="#reservations">PLACE ORDER</a>
     </div>
   </section>
 
   <section class="about-section">
     <article>
       <h3>
-          Section for the text why your restaurant is the best.
+          Jimenez Produce proudly operates out of two strategic locations: Robertsdale, Alabama, and Lafayette, Louisiana.
       </h3>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-        A quos, voluptatum illum mollitia dolores libero placeat 
-        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit, 
-        amet consectetur adipisicing elit. 
-        A quos, voluptatum illum mollitia dolores libero placeat 
-        nesciunt quasi adipisci impedit!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-        A quos, voluptatum illum mollitia dolores libero placeat 
-        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
+        We are dedicated to supplying a myriad of Mexican restaurants with a vast array of essential items. Our inventory encompasses premium dry goods, essential paper products, aromatic spices, and top-tier fresh produce to seamlessly meet the diverse needs of our valued clientele, contributing to their culinary success with quality and reliability at the forefront.
       </p>
     </article>
   </section>
