--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,44 +9,37 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Restaurant Website</title>
-  </head>
-  <body>
-    
-    
+    <title>Jimenez Produce</title>
+</head>
+<body>
   <nav>
     <ul class="nav-flex-row">
       <li class="nav-item">
-        <a href="#about">Dry Goods</a>
+        <a href="#about"></a>
       </li>
       <li class="nav-item">
-        <a href="#reservation">Paper Products</a>
+        <a href="#reservation"></a>
       </li>
       <li class="nav-item">
-        <a href="#menu">Aromatic Spices</a>
+        <a href="#menu"></a>
       </li>
       <li class="nav-item">
-        <a href="#shop">Fresh Produce</a>
+        <a href="#shop"></a>
       </li>
     </ul>
   </nav>
 
   <section class="section-intro">
-    <header>
-      <h1>WEBSITE COMING SOON</h1>
-    </header>
-    <div class="link-to-book-wrapper">
-      <a class="link-to-book" href="#reservations">PLACE ORDER</a>
-    </div>
+   
   </section>
 
   <section class="about-section">
     <article>
       <h3>
-          Jimenez Produce proudly operates out of two strategic locations: Robertsdale, Alabama, and Lafayette, Louisiana.
+        WEBSITE COMING SOON!
       </h3>
       <p>
-        We are dedicated to supplying a myriad of Mexican restaurants with a vast array of essential items. Our inventory encompasses premium dry goods, essential paper products, aromatic spices, and top-tier fresh produce to seamlessly meet the diverse needs of our valued clientele, contributing to their culinary success with quality and reliability at the forefront.
+        Jimenez Produce proudly operates out of two strategic locations: Robertsdale, Alabama, and Lafayette, Louisiana. We are dedicated to supplying a myriad of Mexican restaurants with a vast array of essential items. Our inventory encompasses premium dry goods, essential paper products, aromatic spices, and top-tier fresh produce to seamlessly meet the diverse needs of our valued clientele, contributing to their culinary success with quality and reliability at the forefront.
       </p>
     </article>
   </section>
@@ -54,13 +47,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/rachel-park-hrlvr2ZlUNk-unsplash.jpg" class="d-block w-100" alt="food">
+        <img src="img/spice-2.jpg" class="d-block w-100" alt="food">
       </div>
       <div class="carousel-item">
-        <img src="img/lily-banse--YHSwy6uqvk-unsplash.jpg" class="d-block w-100" alt="food">
+        <img src="img/veg-3.jpg" class="d-block w-100" alt="food">
       </div>
       <div class="carousel-item">
-        <img src="img/brooke-lark-aGjP08-HbYY-unsplash.jpg" class="d-block w-100" alt="food">
+        <img src="img/paper-1.jpg" class="d-block w-100" alt="food">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -77,12 +70,12 @@
     <div class="row-flex">
       <div class="flex-column-form">
         <h3>
-          Make a booking
+          Place an order
         </h3>
-      <form class="media-centered">
+        <form class="media-centered">
           <div class="form-group">
             <p>
-              Please leave your number we will call to make a reservation
+              Please leave your number we will call to place an order
             </p>
             <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Enter your name">
           </div>
@@ -90,16 +83,14 @@
             <input type="number" class="form-control" id="exampleInputphoneNumber1" placeholder="Enter your phone number">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+        </form>
       </div>
       <div class="opening-time">
         <h3>
-          Opening times
+          Active Hours
         </h3>
         <p>
-         <span>Monday—Thursday: 08:00 — 22:00</span> 
-         <span>Friday—Saturday: 09:00 — 23:00 </span>
-         <span>Sunday: 10:00 — 17:00</span>
+          <span>Monday—Friday: 08:00 — 22:00</span> 
         </p>
       </div>
       <div class="contact-adress">
@@ -107,23 +98,18 @@
           Contact
         </h3>
         <p>
-          <span>000 9283 8456</span>
-          <span>15 Florida Ave</span>
-          <span>Palo-Alto, 1111 CA</span>
+          <span>251-262-2607</span>
+          <span>Robertsdale | Alabama | Lafayette</span>
         </p>
       </div>
     </div>
-    </div>
-
-
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- 
-  </body>
-  
-</html> 
+</body>
+</html>
+
