--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Favicon -->
+    <link rel="icon" href="img/jimenez.ico" type="image/x-icon">
+
     <title>Jimenez Produce</title>
 </head>
 <body>
@@ -70,12 +73,12 @@
     <div class="row-flex">
       <div class="flex-column-form">
         <h3>
-          Place an order
+          Want more information?
         </h3>
         <form class="media-centered">
           <div class="form-group">
             <p>
-              Please leave your number we will call to place an order
+              Leave your contact information and we will reach out as soon as possible! 
             </p>
             <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Enter your name">
           </div>
@@ -87,10 +90,11 @@
       </div>
       <div class="opening-time">
         <h3>
-          Active Hours
+          Business Hours (CT): 
         </h3>
         <p>
-          <span>Monday—Friday: 08:00 — 22:00</span> 
+          <span>Office Hours 8:00AM - 4:30PM</span>
+	  <span>Recieving Hours 8:00AM - 2:30PM</span>
         </p>
       </div>
       <div class="contact-adress">
@@ -98,8 +102,12 @@
           Contact
         </h3>
         <p>
-          <span>251-262-2607</span>
-          <span>Robertsdale | Alabama | Lafayette</span>
+	<span>Phone: +1 (251)-262-2607</span> 
+	<span>Email: Sales@Jimenezproduce.net</span>
+	<span> Locations:</span>
+	<span>23141 Rubens Ln Robertsdale, AL 36567</span>
+	<span>100 Goldenrod Dr Lafayette, LA  70507</span>
+	<span>Robertsdale, AL | Lafayette, LA</span>
         </p>
       </div>
     </div>
